--- a/BffDemo.Bff1/BffDemo.Client1/src/app/app.component.html
+++ b/BffDemo.Bff1/BffDemo.Client1/src/app/app.component.html
@@ -227,13 +227,14 @@
       </svg>
       <h1>Hello, {{ title }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
-      <ng-template #loggedIn>
-        <p>Welcome, {{ user?.name }}!</p>
-        <button id="LogoutButton" (click)="onLogout($event)">Log out</button>
-      </ng-template>
-      <div *ngIf="!user; else loggedIn">
+
+      <div *ngIf="!user">
         <p>You are not logged in.</p>
         <button id="LoginButton" (click)="onLogin($event)">Log in</button>
+      </div>
+      <div *ngIf="user">
+        <p>Welcome, {{ user.name }}!</p>
+        <button id="LogoutButton" (click)="onLogout($event)">Log out</button>
       </div>
       <div *ngIf="data">
         <p>{{data}}</p>
